replace log4j 1 with reload4j
Signed-off-by: Ceki Gulcu <ceki@qos.ch>